# msbuilddockerimage

./: CMakeLists.txt  build_hello.bat  build_hello.ps1  go.bat
.github/workflows/: main.yml
cmake/: CPackConfig.cmake.in
docker/: Dockerfile
src/: main.cpp  main.qml
